# anyfs

./: LICENSE  README.md  README.rst  default.nix  flake.nix  launcher.py  pyproject.toml
examples/: fake.sh  mirror.sh  testurl.sh
src/anyfs/: __init__.py  anyfs.py  cachedfile.py  caching.py  communicator.py  contentcache.py  mystat.py  pathmap.py  pathstorage.py  program.py  protocol.py
